--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Vue Mastery Class</title>
+    <title>Vue Mastery</title>
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
+    <div id="app">
+      <h1>Product goes here</h1>
+    </div>
+
+    <!-- Import Js -->
+    <script src="./main.js"></script>
   </body>
 </html>
