replaced app div for script to import app from main.js

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="app">
-      <h1>Product goes here</h1>
-    </div>
+    <!-- Import App -->
+    <script src="./main.js"></script>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
