--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div id="app">
       <h1>{{ product }}: {{ price }}</h1>
+      <p>{{ description }}</p>
     </div>
 
     <!-- Import App -->
