--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product }}: {{ price }}</h1>
-      <p>{{ description }}</p>
+      <div class="nav-bar"></div>
+
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <img src="image" alt="two green socks">
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+          </div>
+        </div>
+      </div>
+      
     </div>
 
     <!-- Import App -->
