v-binded an href in an a tag to solve class challenge, sending users who click thru to personal website

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="product-container">
           <div class="product-image">
             <img :src="image" alt="two green socks">
+            <a :href="url" target="blank">powered by aaron a.</a>
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
