--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <p>In Stock</p>
           </div>
         </div>
       </div>
