--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div class="product-info">
             <h1>{{ product }}</h1>
             <p>In Stock</p>
+            <p>Out of Stock</p>
           </div>
         </div>
       </div>
