--- a/index.html
+++ b/index.html
@@ -16,14 +16,26 @@
         <div class="product-container">
           <div class="product-image">
             <img :src="image" alt="two green socks">
-            <a :href="url" target="blank">powered by aaron a.</a>
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
             <p v-if="onSale">item is on sale!</p>
             <p v-if="inventory > 10">In Stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Only {{inventory}} left!</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">
+              Only {{inventory}} left!</p>
             <p v-else>Out of Stock</p>
+            <p style="color: rgba(126, 118, 118, 0.598); 
+            font-size: x-small;
+            text-decoration: none;">
+              powered by 
+              <span>
+                <a :href="url" target="blank"
+                style="color: rgba(89, 89, 89, 0.824); 
+                font-size: x-small;">
+                  aaron a.
+                </a>
+              </span>
+            </p>
           </div>
         </div>
       </div>
