modified color of low inventory alert and made number bold

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p v-if="onSale">item is on sale!</p>
             <p v-if="inventory > 10">In Stock</p>
             <p v-else-if="inventory <= 10 && inventory > 0" 
-              style="color: rgb(255, 0, 0);">
-              Only {{inventory}} left!</p>
+              style="color: rgba(255, 47, 0, 0.79);">
+              Only <b>{{inventory}}</b> left!</p>
             <p v-else>Out of Stock</p>
             <p style="color: rgba(126, 118, 118, 0.598); 
             font-size: x-small;
