--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
               style="color: rgba(255, 47, 0, 0.79);">
               Only <b>{{inventory}}</b> left!</p>
             <p v-else>Out of Stock</p>
+            <ul>
+              <li v-for="detail in details">{{ detail }}</li>
+            </ul>
             <p style="color: rgba(126, 118, 118, 0.598); 
             font-size: x-small;
             text-decoration: none;">
