--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="app">
       <div class="nav-bar"></div>
 
+      <div class="cart">Cart({{ cart }})</div>
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
@@ -28,6 +30,7 @@
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
+            <div v-for="option in options">{{ option.color }}</div>
             <p style="color: rgba(126, 118, 118, 0.598); 
             font-size: x-small;
             text-decoration: none;">
