added button at end of products container

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <div v-for="option in options">{{ option.color }}</div>
+            
+            <button class="button">Add to Cart</button>
+
             <p style="color: rgba(126, 118, 118, 0.598); 
             font-size: x-small;
             text-decoration: none;">
