--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               >{{ option.color }}</div>
             
             <button class="button" v-on:click="addToCart">Add to Cart</button>
+            <button class="button" v-on:click="removeFromCart">Remove from Cart</button>
 
             <p style="color: rgba(126, 118, 118, 0.598); 
             font-size: x-small;
