added backend logic to decrease inventory by one every time an item is added to the cart, which updates inventory seen by user in frontend, and also added code to prevent user from adding items to cart once items are out-of-stock

--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
               v-for="option in options" 
               :key="option.id"
               @mouseover="updateImage(option.image)"
-              >{{ option.color }}</div>
+              class="color-circle"
+              :style="{ backgroundColor: option.color }"
+              ></div>
             
-            <button class="button" v-on:click="addToCart">Add to Cart</button>
+            <button 
+              class="button" 
+              v-on:click="addToCart"
+              :disabled="inventory === 0">Add to Cart</button>
             <button class="button" v-on:click="removeFromCart">Remove from Cart</button>
 
             <p style="color: rgba(126, 118, 118, 0.598); 
