refactored product h1 to title and added a computed value in data object which joins product & brand to create a product title

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <img :src="image" alt="two green socks">
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
+            <h1>{{ title }}</h1>
             <p v-if="onSale">item is on sale!</p>
             <p v-if="inventory > 10">In Stock</p>
             <p v-else-if="inventory <= 10 && inventory > 0" 
               style="color: rgba(255, 47, 0, 0.79);">
-              Only <b>{{inventory}}</b> left!</p>
+              Only <b>{{ inventory }}</b> left!</p>
             <p v-else>Out of Stock</p>
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
