--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="product-info">
             <h1>{{ title }}</h1>
             <p v-if="onSale">item is on sale!</p>
-            <p v-if="inventory > 10">In Stock</p>
+            <p v-if="inStock">In Stock</p>
             <p v-else-if="inventory <= 10 && inventory > 0" 
               style="color: rgba(255, 47, 0, 0.79);">
               Only <b>{{ inventory }}</b> left!</p>
@@ -31,9 +31,9 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <div 
-              v-for="option in options" 
+              v-for="(option, index) in options" 
               :key="option.id"
-              @mouseover="updateImage(option.image)"
+              @mouseover="updateOption(index)"
               class="color-circle"
               :style="{ backgroundColor: option.color }"
               ></div>
@@ -41,8 +41,8 @@
             <button 
               class="button" 
               v-on:click="addToCart"
-              :disabled="inventory === 0"
-              :class="{ disabledButton: inventory === 0 }"
+              :disabled="!inStock"
+              :class="{ disabledButton: !inStock }"
               >Add to Cart
             </button>
             <button class="button" v-on:click="removeFromCart">Remove from Cart</button>
