--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart }})</div>
-      <product-display></product-display>
-      <product-display></product-display>
-      <product-display></product-display>
+      <product-display :prime="prime"></product-display>
+      <product-details></product-details>
       
     </div>
 
@@ -24,6 +23,7 @@
 
      <!-- Import Components -->
      <script src="./components/ProductDisplay.js"></script>
+     <script src="./components/ProductDetails.js"></script>
 
     <!-- Mount App -->
     <script>
