refactored program to reuse logic that keeps track of a hardcoded inventory: this needs to evolve into probably consuming a service, but for now, at least this version lets the user know how many items are left.  had to define inventory in instance, add into template within component, and also add to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart }})</div>
-      <product-display :prime="prime"></product-display>
+      <product-display 
+        :prime="prime"
+        :inventory="inventory"
+        @add-to-cart="updateCart"
+        @remove-from-cart="removeFromCart">
+      </product-display>
       
     </div>
 
