fixed empty cart button as per previous commit: new productDisplay  method, received by main.js method, also imported @ into index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         :prime="prime"
         :inventory="inventory"
         @add-to-cart="updateCart"
-        @remove-from-cart="removeFromCart">
+        @remove-from-cart="removeFromCart"
+        @empty-cart="emptyCart">
       </product-display>
       
     </div>
