--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
      <!-- Import Components -->
      <script src="./components/ProductDisplay.js"></script>
      <script src="./components/ProductDetails.js"></script>
+     <script src="./components/ReviewForm.js"></script>
 
     <!-- Mount App -->
     <script>
